@@ -216,6 +216,8 @@ th.titles:last-child		{min-width:100px;}
 	============================================= */
 table.head					{width:100%; margin:0 auto; border-collapse:initial;}
 table.head td.options		{color:#FFF; text-align:right; vertical-align:top; font-size:0.9em;}
+table.head td				{cursor:default;}
+table.head img				{-webkit-filter:brightness(100%); filter:brightness(100%);}
 
 
 /*	Table for Country Name and Flag
