@@ -2,6 +2,7 @@ Static site (2014-10-30 shi)
 ==============================
 Main links are now more prominent
 Flag alt text fixed
+Hover colours for about links
 
 
 Static site (2014-10-29 shi)
